productVariationValue swagger add
